# rusty

./: Cargo.toml  README.md  example-config.json
.github/workflows/: ci.yml
docs/: WORKPLAN.md  ux-design.md
src/: client.rs  completion.rs  config.rs  lib.rs  main.rs  server.rs
src/providers/: mod.rs  static_provider.rs
tests/: README.md  requirements.txt  test_jsonrpc_server.py
